[gd_scene load_steps=30 format=3 uid="uid://dtsxnn02yq3bu"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_gwt2r"]
[ext_resource type="Script" path="res://addons/godot_state_charts/state_chart.gd" id="2_ktoio"]
[ext_resource type="PackedScene" uid="uid://enu7pio03tn" path="res://imports/Player/Player.glb" id="2_uhibh"]
[ext_resource type="Script" path="res://addons/godot_state_charts/compound_state.gd" id="3_dvcf3"]
[ext_resource type="Script" path="res://scripts/Player/interaction_manager.gd" id="3_pcfnj"]
[ext_resource type="Script" path="res://addons/godot_state_charts/atomic_state.gd" id="4_0u3os"]
[ext_resource type="Script" path="res://addons/godot_state_charts/parallel_state.gd" id="4_38p2m"]
[ext_resource type="Script" path="res://scripts/PlayerAnimations.gd" id="7_i53gn"]
[ext_resource type="Script" path="res://addons/godot_state_charts/state_is_active_guard.gd" id="10_0yp4e"]
[ext_resource type="Script" path="res://addons/godot_state_charts/transition.gd" id="10_oq8ui"]
[ext_resource type="PackedScene" uid="uid://bcwkugn6v3oy7" path="res://addons/godot_state_charts/utilities/state_chart_debugger.tscn" id="10_qma8e"]
[ext_resource type="Script" path="res://addons/godot_state_charts/not_guard.gd" id="11_alybe"]
[ext_resource type="Script" path="res://scripts/terrain_checker.gd" id="11_av7cv"]
[ext_resource type="Script" path="res://addons/godot_state_charts/history_state.gd" id="11_d53iw"]

[sub_resource type="SphereShape3D" id="SphereShape3D_1i6kn"]
radius = 1.15872

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_ygxgn"]
radius = 0.258349
height = 1.64567

[sub_resource type="Resource" id="Resource_c0lfh"]
script = ExtResource("10_0yp4e")
state = NodePath("../Jump")

[sub_resource type="Resource" id="Resource_iq63u"]
script = ExtResource("11_alybe")
guard = SubResource("Resource_c0lfh")

[sub_resource type="SphereShape3D" id="SphereShape3D_cwnvv"]
radius = 0.249497

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_eu8ur"]
animation = &"sprint_loop_baked"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_f8ud4"]
animation = &"idle_loop_baked"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_bm3tk"]
animation = &"climb_right_baked"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ibsah"]
animation = &"jump_baked"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_jnuos"]
animation = &"walk_loop_baked"

[sub_resource type="Curve" id="Curve_qnaia"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="AnimationNodeOneShot" id="AnimationNodeOneShot_fljws"]
fadein_time = 0.25
fadein_curve = SubResource("Curve_qnaia")
fadeout_time = 0.15
fadeout_curve = SubResource("Curve_qnaia")

[sub_resource type="AnimationNodeTimeScale" id="AnimationNodeTimeScale_pmagp"]

[sub_resource type="AnimationNodeTransition" id="AnimationNodeTransition_7030c"]
xfade_time = 0.25
xfade_curve = SubResource("Curve_qnaia")
input_0/name = "walk"
input_0/auto_advance = false
input_0/break_loop_at_end = false
input_0/reset = true
input_1/name = "sprint"
input_1/auto_advance = false
input_1/break_loop_at_end = false
input_1/reset = true
input_2/name = "idle"
input_2/auto_advance = false
input_2/break_loop_at_end = false
input_2/reset = true
input_3/name = "mount"
input_3/auto_advance = false
input_3/break_loop_at_end = false
input_3/reset = true

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_kqb0i"]
graph_offset = Vector2(-487.188, -59.3851)
nodes/Animation/node = SubResource("AnimationNodeAnimation_jnuos")
nodes/Animation/position = Vector2(-120, -180)
"nodes/Animation 2/node" = SubResource("AnimationNodeAnimation_eu8ur")
"nodes/Animation 2/position" = Vector2(240, 60)
"nodes/Animation 3/node" = SubResource("AnimationNodeAnimation_f8ud4")
"nodes/Animation 3/position" = Vector2(240, 200)
"nodes/Animation 4/node" = SubResource("AnimationNodeAnimation_bm3tk")
"nodes/Animation 4/position" = Vector2(280, 360)
"nodes/Animation 5/node" = SubResource("AnimationNodeAnimation_ibsah")
"nodes/Animation 5/position" = Vector2(720, 540)
nodes/OneShot/node = SubResource("AnimationNodeOneShot_fljws")
nodes/OneShot/position = Vector2(940, 300)
nodes/TimeScale/node = SubResource("AnimationNodeTimeScale_pmagp")
nodes/TimeScale/position = Vector2(334.237, -136.576)
nodes/Transition/node = SubResource("AnimationNodeTransition_7030c")
nodes/Transition/position = Vector2(660, 180)
nodes/output/position = Vector2(1160, 160)
node_connections = [&"OneShot", 0, &"Transition", &"OneShot", 1, &"Animation 5", &"TimeScale", 0, &"Animation", &"Transition", 0, &"TimeScale", &"Transition", 1, &"Animation 2", &"Transition", 2, &"Animation 3", &"Transition", 3, &"Animation 4", &"output", 0, &"OneShot"]

[node name="Player" instance=ExtResource("2_uhibh")]
collision_layer = 2
collision_mask = 9
floor_max_angle = 1.0472
script = ExtResource("1_gwt2r")

[node name="InteractionManager" type="Node3D" parent="." index="0"]
script = ExtResource("3_pcfnj")

[node name="Armature" parent="." index="1"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)

[node name="Skeleton3D" parent="Armature" index="0"]
bones/0/position = Vector3(-6.58584e-15, 0.761263, -0.0381256)
bones/0/rotation = Quaternion(0.160989, 1.17952e-07, 1.924e-08, 0.986956)
bones/1/rotation = Quaternion(-0.0538832, 1.2263e-10, -1.28859e-08, 0.998547)
bones/2/rotation = Quaternion(-0.195026, -0.00128038, -0.000221292, 0.980797)
bones/3/rotation = Quaternion(-0.00621931, -0.0036993, -0.000432581, 0.999974)
bones/4/rotation = Quaternion(0.493265, 0.0023609, -0.000832638, 0.869875)
bones/5/rotation = Quaternion(-0.222539, 1.25407e-07, 5.50072e-09, 0.974924)
bones/5/scale = Vector3(1, 1, 1)
bones/6/rotation = Quaternion(-0.195434, 0.00246104, -0.000458128, 0.980714)
bones/7/rotation = Quaternion(-0.578611, -0.313251, -0.364376, 0.659025)
bones/8/rotation = Quaternion(-0.521393, 0.468421, -0.233164, 0.674066)
bones/8/scale = Vector3(1, 1, 1)
bones/9/position = Vector3(-1.95121e-08, 0.0970115, -1.39593e-08)
bones/9/rotation = Quaternion(1.37482e-08, 0.0728403, -3.19884e-08, 0.997344)
bones/10/position = Vector3(6.83677e-08, 0.0970114, 3.27273e-08)
bones/10/rotation = Quaternion(0.176945, 0.0728495, -0.262562, 0.945751)
bones/11/position = Vector3(-1.55751e-08, 0.10908, 2.57433e-08)
bones/11/rotation = Quaternion(7.46287e-08, 0.0380783, -4.39887e-08, 0.999275)
bones/12/position = Vector3(-9.64339e-09, 0.10908, 1.82615e-09)
bones/12/rotation = Quaternion(-0.0704113, 0.0374937, -0.0393165, 0.996038)
bones/12/scale = Vector3(1, 1, 1)
bones/13/rotation = Quaternion(-0.576697, 0.312192, 0.365283, 0.660701)
bones/14/rotation = Quaternion(-0.516744, -0.471201, 0.186931, 0.689929)
bones/14/scale = Vector3(1, 1, 1)
bones/15/position = Vector3(2.39665e-08, 0.0959759, -1.5013e-08)
bones/15/rotation = Quaternion(-1.63017e-08, -0.070041, 1.24851e-07, 0.997544)
bones/16/position = Vector3(-8.5972e-09, 0.0959759, 4.3752e-09)
bones/16/rotation = Quaternion(0.137387, -0.0700454, 0.268793, 0.950773)
bones/17/position = Vector3(1.93097e-08, 0.108082, -4.46686e-09)
bones/17/rotation = Quaternion(1.53719e-08, -0.0935332, -1.2066e-09, 0.995616)
bones/18/position = Vector3(1.74529e-08, 0.108082, 7.68064e-08)
bones/18/rotation = Quaternion(-0.0999438, -0.0929673, 0.0291574, 0.990211)
bones/18/scale = Vector3(1, 1, 1)
bones/19/rotation = Quaternion(-8.37082e-08, 0.656385, 0.754426, -1.81131e-08)
bones/20/rotation = Quaternion(3.11396e-08, 0.656385, 0.754426, 7.9358e-08)
bones/22/rotation = Quaternion(-0.44604, -0.559201, 0.697944, -0.0348754)
bones/22/scale = Vector3(1, 1, 1)
bones/23/position = Vector3(8.01087e-09, 0.193127, -5.55581e-09)
bones/23/rotation = Quaternion(-7.13535e-09, -0.00200736, -4.56896e-09, 0.999998)
bones/24/position = Vector3(-4.28818e-09, 0.193127, 2.19994e-08)
bones/24/rotation = Quaternion(0.425777, -0.00152633, 0.000728345, 0.904827)
bones/25/position = Vector3(7.51706e-09, 0.179549, -2.36312e-08)
bones/25/rotation = Quaternion(-1.35553e-08, 0.010358, 1.60333e-08, 0.999946)
bones/26/position = Vector3(-3.61613e-09, 0.179549, 1.59222e-08)
bones/26/rotation = Quaternion(-0.520178, 0.109745, -0.0154615, 0.846837)
bones/26/scale = Vector3(1, 1, 1)
bones/27/position = Vector3(1.02286e-09, 0.072908, 2.83153e-08)
bones/27/rotation = Quaternion(-9.02926e-06, 0.992073, -0.125661, 3.4575e-07)
bones/28/rotation = Quaternion(-0.174379, 0.780098, 0.32054, 0.508226)
bones/28/scale = Vector3(1, 1, 1)
bones/29/rotation = Quaternion(0.456307, -0.481974, 0.747916, 0.0102908)
bones/29/scale = Vector3(1, 1, 1)
bones/30/position = Vector3(1.46905e-08, 0.198055, 2.10006e-09)
bones/30/rotation = Quaternion(-2.1486e-08, 0.000822454, -2.6853e-08, 1)
bones/31/position = Vector3(-7.61721e-09, 0.198055, 6.96738e-09)
bones/31/rotation = Quaternion(0.0229184, 0.000807241, -1.87348e-05, 0.999737)
bones/31/scale = Vector3(1, 1, 1)
bones/32/position = Vector3(1.17519e-08, 0.184517, 6.03171e-11)
bones/32/rotation = Quaternion(8.83513e-09, -0.00618284, -1.04054e-08, 0.999981)
bones/33/position = Vector3(-5.99295e-09, 0.184517, 1.12276e-08)
bones/33/rotation = Quaternion(-0.526578, -0.105545, -0.0431402, 0.842446)
bones/33/scale = Vector3(1, 1, 1)
bones/34/position = Vector3(-6.08609e-09, 0.0728509, 2.48515e-09)
bones/34/rotation = Quaternion(-3.83754e-05, 0.991925, -0.126824, 5.69342e-06)
bones/34/scale = Vector3(1, 1, 1)

[node name="NPCDetector" type="Area3D" parent="." index="2"]
collision_layer = 16
collision_mask = 8

[node name="CollisionShape3D" type="CollisionShape3D" parent="NPCDetector" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.9)
shape = SubResource("SphereShape3D_1i6kn")

[node name="Collider" type="CollisionShape3D" parent="." index="4"]
transform = Transform3D(-1, 0, 1.50996e-07, 0, 1, 0, -1.50996e-07, 0, -1, 2.46583e-10, 0.822029, -0.0392129)
shape = SubResource("CapsuleShape3D_ygxgn")

[node name="StateChart" type="Node" parent="." index="5"]
script = ExtResource("2_ktoio")
track_in_editor = true

[node name="Root" type="Node" parent="StateChart" index="0"]
script = ExtResource("4_38p2m")

[node name="Movement" type="Node" parent="StateChart/Root" index="0"]
script = ExtResource("3_dvcf3")
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateChart/Root/Movement" index="0"]
script = ExtResource("4_0u3os")

[node name="ToWalk" type="Node" parent="StateChart/Root/Movement/Idle" index="0"]
script = ExtResource("10_oq8ui")
to = NodePath("../../Walk")
event = &"walk"
delay_in_seconds = "0.0"

[node name="ToJump" type="Node" parent="StateChart/Root/Movement/Idle" index="1"]
script = ExtResource("10_oq8ui")
to = NodePath("../../Jump")
event = &"jump"
delay_in_seconds = "0.0"

[node name="Walk" type="Node" parent="StateChart/Root/Movement" index="1"]
script = ExtResource("4_0u3os")

[node name="ToSprint" type="Node" parent="StateChart/Root/Movement/Walk" index="0"]
script = ExtResource("10_oq8ui")
to = NodePath("../../Sprint")
event = &"sprint"
delay_in_seconds = "0.0"

[node name="ToJump" type="Node" parent="StateChart/Root/Movement/Walk" index="1"]
script = ExtResource("10_oq8ui")
to = NodePath("../../Jump")
event = &"jump"
delay_in_seconds = "0.0"

[node name="ToIdle" type="Node" parent="StateChart/Root/Movement/Walk" index="2"]
script = ExtResource("10_oq8ui")
to = NodePath("../../Idle")
event = &"idle"
delay_in_seconds = "0.0"

[node name="Jump" type="Node" parent="StateChart/Root/Movement" index="2"]
script = ExtResource("4_0u3os")

[node name="ToLastState" type="Node" parent="StateChart/Root/Movement/Jump" index="0"]
script = ExtResource("10_oq8ui")
to = NodePath("../../HistoryState")
event = &"last_state"
delay_in_seconds = "0.0"

[node name="Sprint" type="Node" parent="StateChart/Root/Movement" index="3"]
script = ExtResource("4_0u3os")

[node name="ToWalk" type="Node" parent="StateChart/Root/Movement/Sprint" index="0"]
script = ExtResource("10_oq8ui")
to = NodePath("../../Walk")
event = &"walk"
delay_in_seconds = "0.0"

[node name="ToJump" type="Node" parent="StateChart/Root/Movement/Sprint" index="1"]
script = ExtResource("10_oq8ui")
to = NodePath("../../Jump")
event = &"jump"
delay_in_seconds = "0.0"

[node name="ToIdle" type="Node" parent="StateChart/Root/Movement/Sprint" index="2"]
script = ExtResource("10_oq8ui")
to = NodePath("../../Idle")
event = &"idle"
delay_in_seconds = "0.0"

[node name="Driving" type="Node" parent="StateChart/Root/Movement" index="4"]
script = ExtResource("4_0u3os")

[node name="ToLastState" type="Node" parent="StateChart/Root/Movement/Driving" index="0"]
script = ExtResource("10_oq8ui")
to = NodePath("../../HistoryState")
event = &"last_state"
delay_in_seconds = "0.0"

[node name="HistoryState" type="Node" parent="StateChart/Root/Movement" index="5"]
script = ExtResource("11_d53iw")
default_state = NodePath("../Idle")

[node name="ToDriving" type="Node" parent="StateChart/Root/Movement" index="6"]
script = ExtResource("10_oq8ui")
to = NodePath("../Driving")
event = &"driving"
delay_in_seconds = "0.0"

[node name="InDialogue" type="Node" parent="StateChart/Root/Movement" index="7"]
script = ExtResource("4_0u3os")

[node name="ToLastState" type="Node" parent="StateChart/Root/Movement/InDialogue" index="0"]
script = ExtResource("10_oq8ui")
to = NodePath("../../HistoryState")
event = &"last_state"
delay_in_seconds = "0.0"

[node name="ToInDialogue" type="Node" parent="StateChart/Root/Movement" index="8"]
script = ExtResource("10_oq8ui")
to = NodePath("../InDialogue")
event = &"in_dialogue"
guard = SubResource("Resource_iq63u")
delay_in_seconds = "0.0"

[node name="Interaction" type="Node" parent="StateChart/Root" index="1"]
script = ExtResource("3_dvcf3")
initial_state = NodePath("Default")

[node name="Default" type="Node" parent="StateChart/Root/Interaction" index="0"]
script = ExtResource("4_0u3os")

[node name="ToCanConverse" type="Node" parent="StateChart/Root/Interaction/Default" index="0"]
script = ExtResource("10_oq8ui")
to = NodePath("../../CanConverse")
event = &"can_converse"
delay_in_seconds = "0.0"

[node name="CanConverse" type="Node" parent="StateChart/Root/Interaction" index="1"]
script = ExtResource("4_0u3os")

[node name="ToConversing" type="Node" parent="StateChart/Root/Interaction/CanConverse" index="0"]
script = ExtResource("10_oq8ui")
to = NodePath("../../Conversing")
event = &"conversing"
delay_in_seconds = "0.0"

[node name="Conversing" type="Node" parent="StateChart/Root/Interaction" index="2"]
script = ExtResource("4_0u3os")

[node name="ToDefault" type="Node" parent="StateChart/Root/Interaction" index="3"]
script = ExtResource("10_oq8ui")
to = NodePath("../Default")
event = &"default"
delay_in_seconds = "0.0"

[node name="Terrain" type="Node" parent="StateChart/Root" index="2"]
script = ExtResource("3_dvcf3")
initial_state = NodePath("Normal")

[node name="Normal" type="Node" parent="StateChart/Root/Terrain" index="0"]
script = ExtResource("4_0u3os")

[node name="Vehicle" type="Node" parent="StateChart/Root/Terrain" index="1"]
script = ExtResource("4_0u3os")

[node name="ToNormal" type="Node" parent="StateChart/Root/Terrain" index="2"]
script = ExtResource("10_oq8ui")
to = NodePath("../Normal")
event = &"terrain_normal"
delay_in_seconds = "0.0"

[node name="ToVehicle" type="Node" parent="StateChart/Root/Terrain" index="3"]
script = ExtResource("10_oq8ui")
to = NodePath("../Vehicle")
event = &"terrain_vehicle"
delay_in_seconds = "0.0"

[node name="TerrainChecker" type="Area3D" parent="." index="6" node_paths=PackedStringArray("state_chart")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.6, 0)
collision_layer = 0
monitorable = false
script = ExtResource("11_av7cv")
state_chart = NodePath("../StateChart")

[node name="CollisionShape3D" type="CollisionShape3D" parent="TerrainChecker" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.598165, 0)
shape = SubResource("SphereShape3D_cwnvv")

[node name="AnimationTree" type="AnimationTree" parent="." index="7"]
tree_root = SubResource("AnimationNodeBlendTree_kqb0i")
anim_player = NodePath("../AnimationPlayer")
parameters/OneShot/active = false
parameters/OneShot/internal_active = false
parameters/OneShot/request = 0
parameters/TimeScale/scale = 1.5
parameters/Transition/current_state = "walk"
parameters/Transition/transition_request = ""
parameters/Transition/current_index = 0
script = ExtResource("7_i53gn")

[node name="Control" type="Control" parent="." index="8"]
layout_mode = 3
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -197.0
offset_bottom = 360.0
grow_horizontal = 0

[node name="StateChartDebugger" parent="Control" index="0" instance=ExtResource("10_qma8e")]
layout_mode = 1
initial_node_to_watch = NodePath("../../StateChart")

[connection signal="body_entered" from="NPCDetector" to="InteractionManager" method="_on_npc_detector_body_entered"]
[connection signal="body_exited" from="NPCDetector" to="InteractionManager" method="_on_npc_detector_body_exited"]
[connection signal="state_entered" from="StateChart/Root/Movement/Idle" to="AnimationTree" method="_on_idle_state_entered"]
[connection signal="state_physics_processing" from="StateChart/Root/Movement/Idle" to="." method="_on_idle_state_physics_processing"]
[connection signal="state_entered" from="StateChart/Root/Movement/Walk" to="AnimationTree" method="_on_walk_state_entered"]
[connection signal="state_physics_processing" from="StateChart/Root/Movement/Walk" to="." method="_on_walk_state_physics_processing"]
[connection signal="state_entered" from="StateChart/Root/Movement/Jump" to="." method="_on_jump_state_entered"]
[connection signal="state_entered" from="StateChart/Root/Movement/Jump" to="AnimationTree" method="_on_jump_state_entered"]
[connection signal="state_physics_processing" from="StateChart/Root/Movement/Jump" to="." method="_on_jump_state_physics_processing"]
[connection signal="state_entered" from="StateChart/Root/Movement/Sprint" to="AnimationTree" method="_on_sprint_state_entered"]
[connection signal="state_physics_processing" from="StateChart/Root/Movement/Sprint" to="." method="_on_sprint_state_physics_processing"]
[connection signal="state_entered" from="StateChart/Root/Movement/Driving" to="AnimationTree" method="_on_driving_state_entered"]
[connection signal="state_physics_processing" from="StateChart/Root/Movement/Driving" to="." method="_on_driving_state_physics_processing"]
[connection signal="state_entered" from="StateChart/Root/Movement/InDialogue" to="InteractionManager" method="_on_in_dialogue_state_entered"]
[connection signal="state_entered" from="StateChart/Root/Movement/InDialogue" to="AnimationTree" method="_on_in_dialogue_state_entered"]
[connection signal="state_exited" from="StateChart/Root/Movement/InDialogue" to="InteractionManager" method="_on_in_dialogue_state_exited"]
[connection signal="state_physics_processing" from="StateChart/Root/Movement/InDialogue" to="." method="_on_in_dialogue_state_physics_processing"]
[connection signal="body_entered" from="TerrainChecker" to="TerrainChecker" method="_on_body_entered"]
[connection signal="body_exited" from="TerrainChecker" to="TerrainChecker" method="_on_body_exited"]
